--- a/package.json
+++ b/package.json
@@ -25,6 +25,10 @@
     "url": "https://github.com/cinthiaconti/react-boilerplate/issues"
   },
   "homepage": "https://github.com/cinthiaconti/react-boilerplate#readme",
+  "jest": {
+    "setupTestFrameworkScriptFile": "./src/enzyme.setup.js",
+    "setupFiles": ["raf/polyfill"]
+  },
   "dependencies": {
     "express": "^4.16.4",
     "react": "^16.6.0",
@@ -37,8 +41,12 @@
     "babel-loader": "^7.1.5",
     "babel-preset-env": "^1.7.0",
     "babel-preset-react": "^6.24.1",
+    "enzyme": "^3.7.0",
+    "enzyme-adapter-react-16": "^1.6.0",
     "html-webpack-plugin": "^3.2.0",
     "jest": "^23.6.0",
+    "raf": "^3.4.0",
+    "react-test-renderer": "^16.6.0",
     "webpack-node-externals": "^1.7.2"
   }
 }
